--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,13 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = "~3.7"
+python = "~3.9"
 
 
 [tool.poetry.group.dev.dependencies]
+isort = "5.12.0"
 black = "^23.3.0"
-pytest = "^7.3.0"
+pytest = "^7.3.2"
 
 
 [tool.poetry.scripts]
